Enabled user interaction during transition

--- a/src/style.css
+++ b/src/style.css
@@ -118,3 +118,11 @@ button.delete {
 ::view-transition-old(with-transition):only-child {
   animation: animate-out ease-out 15s;
 }
+
+::view-transition {
+  pointer-events: none;
+}
+
+:root {
+  view-transition-name: none;
+}
